@@ -1,3 +1,10 @@
+2013-04-14 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/main.c:
+	  STM8: Applied patch from Valentin Dudouyt to set default code loc.
+	* src/stm8/gen.c:
+	  STM8: Be more cautious about arithmetic on stack pointer.
+
 2013-04-13 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCglobl.h,
